@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojo-Run3
 
 0.06 Not Released
+ - Add bytes_waiting()
  - Add support for close("other");
 
 0.05 2022-06-13T18:53:02+0900
